# rust-kern

./: .clangd  .gitignore  Cargo.toml  Makefile  TODO  build.rs  flake.nix  linker.ld  linker_qemu.ld  rust-toolchain.toml  temp  test.txt  todo
.cargo/: config.toml
bootloader/: Cargo.toml  build.rs
bootloader/ld_scripts/: linker_bbb.ld  linker_qemu.ld
bootloader/libfat32/: Makefile
bootloader/src/: boot.S  lib.rs  main.rs  panic.rs
bootloader/src/hal/: board.rs  i2c.rs
bootloader/src/hal/bbb/: cm.rs  eeprom.rs  i2c.rs  mmc.rs
bootloader/src/hal/qemu/: dram.rs  mmc.rs  regs.rs
bootloader/tools/: mksdimage.sh
hal/: Cargo.toml
hal/src/: asm.rs  board.rs  ccm.rs  dram.rs  gpio.rs  i2c.rs  lib.rs  macros.rs  mmc.rs  mmu.rs  uart.rs  util.rs
hal/src/bbb/: cm.rs  dram.rs  i2c.rs  mmc.rs  mod.rs  regs.rs  tps.rs  uart.rs
hal/src/qemu/: mmc.rs  uart.rs
kernel/: Cargo.toml  build.rs  kernel.ld
kernel/src/: main.rs
libfat32/: fat32.c
libs/: Cargo.toml
libs/fat32/: Cargo.toml  Makefile  build.rs
libs/fat32/c_src/: fat32.c  fat32.h
libs/fat32/src/: lib.rs  test.rs
src/: boot.S  main.rs  panic.rs
src/hal/: asm.rs  board.rs  ccm.rs  dram.rs  i2c.rs  macros.rs  mmc.rs  mmu.rs  mod.rs  uart.rs  util.rs
src/hal/bbb/: cm.rs  dram.rs  eeprom.rs  i2c.rs  mmc.rs  mod.rs  regs.rs  tps.rs  uart.rs
src/hal/qemu/: mmc.rs  mod.rs  regs.rs  uart.rs
tools/: flash_bbb.sh  hal_outer.rs  mk-gpimage  mksdimag_old.sh  mksdimage.sh  run_qemu.sh
