[package]
name = "bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
hal = { path = "../hal", default-features = false }
fat32 = { path = "../libs/fat32" }

[features]
default = ["qemu"]
qemu = ["hal/qemu"]
bbb = ["hal/bbb"]

[build-dependencies]
cc = "1.0"


[lib]
name = "bootloader_types"
path = "src/lib.rs"       # This points to your lib.rs file
