[package]
name = "bootloader"
version = "0.1.0"
edition = "2024"

[lib]
name = "bootloader_types"
path = "src/lib.rs"

[dependencies] # Use custom allocator
hal = { path = "../hal", default-features = false }
fat32 = { path = "../libs/fat32", features = ["no-std"] }

# [dependencies.rmodem]
# version = "0.1.1"
# default-features = false
# features = ["1k"]

[features]
default = ["qemu", "boot_uart"]
qemu = ["hal/qemu"]
bbb = ["hal/bbb"]

# boot modes
boot_mmc = []
boot_uart = []

[build-dependencies]
cc = "1.0"
